# psplice

./: .gitignore  LICENSE  README.md  pyproject.toml
psplice/: __init__.py  cli.py
psplice/behaviors/: __init__.py  catalog.py
psplice/client/: __init__.py  daemon_client.py
psplice/daemon/: __init__.py  manager.py  server.py
psplice/interventions/: __init__.py  base.py  heads.py  layers.py  lora_adapter.py  registry.py  steering.py
psplice/modeling/: __init__.py  inspector.py  loader.py
psplice/runtime/: __init__.py  generation.py  hooks.py  vector_extraction.py
psplice/state/: __init__.py  model_session.py  presets.py  session.py
psplice/ui/: __init__.py  chat.py  display.py
tests/: conftest.py  test_client.py  test_hooks.py  test_interventions.py  test_presets.py  test_server_state.py  test_session.py  test_vector_extraction.py
